<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

  <LinearLayout
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="match_parent">
    <ImageView
        android:layout_weight="4"
        android:src="@drawable/ic_splash"
        android:scaleType="centerCrop"
        android:layout_width="match_parent"
        android:layout_height="0dp" />
    <View
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>
  </LinearLayout>
  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent">

  <LinearLayout
      android:gravity="center"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">
  <ImageView
      android:id="@+id/imageView"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="10dp"
      android:layout_marginRight="10dp"
      android:layout_marginTop="10dp"
      android:layout_marginBottom="25dp"
      android:src="@drawable/icon2" />

  <TextView
      android:id="@+id/tv_name"
      android:layout_width="match_parent"
      android:layout_height="23dp"
      android:layout_marginLeft="10dp"
      android:layout_marginRight="10dp"
      android:layout_marginTop="25dp"
      android:layout_marginBottom="7dp"
      android:textSize="20dp"
      android:textStyle="bold"
      android:text="@string/dummy_name"
      android:textAlignment="center" />
    <TextView
        android:id="@+id/tv_username"
        android:layout_width="match_parent"
        android:layout_height="23dp"
        android:layout_marginBottom="7dp"
        android:textSize="17dp"
        android:text="@string/dummy_username"
        android:textAlignment="center" />
    <TextView
        android:id="@+id/tv_pass"
        android:layout_width="match_parent"
        android:layout_height="23dp"
        android:layout_marginBottom="25dp"
        android:textSize="17dp"
        android:text="@string/dummy_pass"
        android:textAlignment="center" />

  <LinearLayout
      android:layout_width="355dp"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="horizontal">

      <ImageView
          android:id="@+id/imageView2"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginRight="10dp"
          app:srcCompat="@android:drawable/ic_dialog_map" />

      <TextView
          android:id="@+id/tv_alamat"
          android:layout_width="match_parent"
          android:layout_height="23dp"
          android:textSize="20dp"
          android:text="@string/dummy_alamat"
          android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="horizontal">
      <ImageView
          android:id="@+id/imageView5"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginRight="10dp"
          app:srcCompat="@android:drawable/ic_dialog_email" />


      <TextView
          android:id="@+id/tv_email"
          android:layout_width="match_parent"
          android:layout_height="25dp"
          android:textSize="20dp"
          android:text="@string/dummy_email"
          android:textAlignment="center" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="horizontal">

      <ImageView
          android:id="@+id/imageView4"
          android:layout_width="32dp"
          android:layout_height="match_parent"
          android:layout_marginRight="10dp"
          app:srcCompat="@android:drawable/stat_sys_vp_phone_call" />


      <TextView
          android:id="@+id/tv_telpon"
          android:layout_width="match_parent"
          android:layout_height="23dp"
          android:textSize="20dp"
          android:text="@string/dummy_telpon"
          android:textAlignment="center" />

    </LinearLayout>

  </LinearLayout>

  <TextView
      android:id="@+id/tv_jenkel"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/dummy_jenkel"
      android:layout_marginLeft="25dp"
      />

  <TextView

      android:layout_width="match_parent"
      android:layout_height="23dp"
      android:layout_marginLeft="25dp"
      android:text="@string/hobi" />

    <TextView
        android:id="@+id/tv_hobi"
        android:layout_width="match_parent"
        android:layout_height="23dp"
        android:layout_marginLeft="25dp"
        android:text="@string/dummy_hobi" />
    <Button
        android:id="@+id/btn_save"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save" />
  </LinearLayout>
  </ScrollView>
</RelativeLayout>