<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_weight="4"
            android:src="@drawable/ic_splash"
            android:scaleType="centerCrop"
            android:layout_width="match_parent"
            android:layout_height="0dp" />
        <View
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="143dp"
            android:layout_marginTop="25dp"
            android:padding="15dp"
            android:src="@drawable/icon" />
        <TextView
            android:layout_margin="?actionBarSize"
            android:textStyle="bold"
            android:textSize="40sp"
            android:textColor="#fff"
            android:text="Register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:padding="10dp"
            android:textColor="#fff"
            android:layout_marginBottom="16dp">
            <EditText
                android:id="@+id/edt_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:hint="@string/username"
                android:textColorHint="#fff"
                android:background="@drawable/rounded_corner_register"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:padding="10dp"
            android:textColor="#fff"
            android:layout_marginBottom="16dp">
            <EditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:hint="@string/name"
                android:textColorHint="#fff"
                android:background="@drawable/rounded_corner_register"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:paddingStart="10dp"
            android:padding="10dp"
            android:text="@string/jenkel" />
        <RadioGroup
            android:id="@+id/rg_jenkel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:padding="10dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/rb_laki"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/laki" />
            <RadioButton
                android:id="@+id/rb_perempuan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/perempuan" />
        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:padding="10dp"
            android:textColor="#fff"
            android:layout_marginBottom="16dp">
            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:hint="@string/email"
                android:textColorHint="#fff"
                android:background="@drawable/rounded_corner_register"
                android:inputType="textEmailAddress"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:padding="10dp"
            android:textColor="#fff"
            android:layout_marginBottom="16dp">
            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:hint="@string/password"
                android:textColorHint="#fff"
                android:background="@drawable/rounded_corner_register"
                android:inputType="textPassword"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:padding="10dp"
            android:textColor="#fff"
            android:layout_marginBottom="16dp">
            <EditText
                android:id="@+id/edt_alamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:hint="@string/alamat"
                android:textColorHint="#fff"
                android:background="@drawable/rounded_corner_register"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:padding="10dp"
            android:textColor="#fff"
            android:layout_marginBottom="16dp">
            <EditText
                android:id="@+id/edt_telpon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:hint="@string/telpon"
                android:textColorHint="#fff"
                android:background="@drawable/rounded_corner_register"
                android:inputType="phone"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:padding="10dp"
            android:textColor="#fff"
            android:layout_marginBottom="16dp">
            <EditText
                android:id="@+id/edt_hobi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:hint="@string/hobi"
                android:textColorHint="#fff"
                android:background="@drawable/rounded_corner_register"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_save"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save" />


    </LinearLayout>
    </ScrollView>
</RelativeLayout>